Add input select e corrige bugs

--- a/app/views/espaconaves/espaconaveDetalhes.scala.html
+++ b/app/views/espaconaves/espaconaveDetalhes.scala.html
@@ -2,7 +2,7 @@
 @import helper._
 @main("Formulário de Espaconaves") {
 <div style="padding:30px;"> 
-	<h1>Formulário de Espaconaves</h1>
+	<h5>Formulário de Espaçonaves</h5>
 	@helper.form(action = routes.Espaconaves.salvar(id)) {
 		<fieldset>
 		<legend>Espaconave (@formEspaconave("nome").valueOr("Novo"))</legend>
