--- a/app/views/espaconaves/espaconaveLista.scala.html
+++ b/app/views/espaconaves/espaconaveLista.scala.html
@@ -3,13 +3,7 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <div style="padding:30px;"> 
-<div> 
-    <a href="/espaconaves/"><button type="button" class="btn btn-primary-outline">Espaçonaves</button></a>
-    <a href="/planetas/"><button type="button" class="btn btn-primary-outline">Planetas</button></a>
-    <a href="/missoes/"><button type="button" class="btn btn-primary-outline">Missões</button></a>
-</div>
-<h2>Todos as espaconaves</h2>
-<a href="/"><button type="button" class="btn btn-primary-outline">Home</button></a>
+<h4>TODAS AS ESPAÇONAVES</h4>
 <a href="/espaconaves/novo"><button type="button" class="btn btn-primary-outline">Novo</button></a>
 <br>
 <br>
