--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -6,21 +6,37 @@
     <head>
 		<title>@title</title>
 		<link href="@routes.Assets.versioned("vendors/materialize/css/materialize.min.css")" rel="stylesheet" media="screen">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
-        <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("vendors/materialize/js/materialize.min.js")" type="text/javascript"></script>
     </head>
     <body>
-    @if(flash.containsKey("success")){
-    <div class="alert alert-success">
-        @flash.get("success")
-    </div>
-	}
-	@if(flash.containsKey("error")){
-   <div class="alert alert-danger">
-       @flash.get("error")
-   </div>
-}
+	    @if(flash.containsKey("success")){
+		    <div class="alert alert-success">
+		        @flash.get("success")
+		    </div>
+		}
+		@if(flash.containsKey("error")){
+		   <div class="alert alert-danger">
+		       @flash.get("error")
+		   </div>
+		}
+
+		<nav class="black" role="navigation">
+		    <div class="nav-wrapper">
+		      <!-- <a id="logo-container" href="#" class="brand-logo">Logo</a> -->
+		      <ul class="left hide-on-med-and-down">
+		        <li><a href="/">Home</a></li>
+		      </ul>
+		      <ul class="left hide-on-med-and-down">
+		        <li><a href="/espaconaves/">Espaçonaves</a></li>
+		      </ul>
+		      <ul class="left hide-on-med-and-down">
+		        <li><a href="/planetas/">Planetas</a></li>
+		      </ul>
+		      <ul class="left hide-on-med-and-down">
+		        <li><a href="/missoes/">Missões</a></li>
+		      </ul>
+		</nav>
     
         @content
     </body>
