--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -7,7 +7,6 @@
 		<title>@title</title>
 		<link href="@routes.Assets.versioned("vendors/materialize/css/materialize.min.css")" rel="stylesheet" media="screen">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
-        <script src="@routes.Assets.versioned("vendors/materialize/js/materialize.min.js")" type="text/javascript"></script>
     </head>
     <body>
 	    @if(flash.containsKey("success")){
@@ -39,5 +38,7 @@
 		</nav>
     
         @content
+        <script src="@routes.Assets.versioned("vendors/jquery-2.2.3.min.js")"></script>
+        <script src="@routes.Assets.versioned("vendors/materialize/js/materialize.min.js")" type="text/javascript"></script>
     </body>
 </html>
